# llm-data-extraction-test

./: .gitignore  README.md  pyproject.toml  set_hf_cache.sh
data/processed/: statistics.json  test.json  test.jsonl  test_finetuning_chat.jsonl  train.json  train.jsonl  train_finetuning_chat.jsonl
docs/: CONFIGURATION_GUIDE.md  EVALUATION_GUIDE.md  EXTRACTION_MODES.md  LANGEXTRACT_USAGE.md  PARALLEL_PROCESSING.md  VLLM_STRUCTURED_OUTPUT.md  run_data_preparation.md  run_finetuning_pipeline.md  run_prompt_engineering_pipeline.md  run_rag_pipeline.md
notebooks/: 00_data_preparation.ipynb  01_prompt_engineering.ipynb  02_rag_pipeline.ipynb  03_finetuning.ipynb  04_comparison.ipynb  05_langextract_method.ipynb  finetuning_pipeline_experiments.ipynb  prompt_pipeline_experiments.ipynb  rag_pipeline_experiments.ipynb
scripts/: convert_to_utf8.py  data_preparation.py  evaluate_extraction_methods.py  quick_evaluate.py  run_data_preparation.py  run_example_extraction.py  run_finetuning_pipeline.py  run_prompt_engineering_pipeline.py  run_rag_pipeline.py
src/: __init__.py  benchmark.py  config.py  data_loader.py  data_processor.py  evaluation.py  finetuning.py  finetuning_pipeline.py  langextract_pipeline.py  prompt_engineering.py  rag_pipeline.py  schema.py  utils.py
src/pipeline/: finetuning_pipeline.py  langextract_pipeline.py  prompt_engineering.py  rag_pipeline.py
src/services/: __init__.py  data_processor.py
